Many fixes based on codestyle, findBugs and PMD reports.